--- a/public/landing.html
+++ b/public/landing.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="menupelis.css">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- HEADER -->
+	<header>
+		<div class="netflixLogo">
+			<a id="logo" href="#home"><img
+					src="https://github.com/carlosavilae/Netflix-Clone/blob/master/img/logo.PNG?raw=true"
+					alt="Logo Image"></a>
+		</div>
+		<nav class="main-nav">
+			<a href="#home">Home</a>
+			<a href="signup.html">Sign up</a>
+			<a href="signin.html">Sign in</a>
+			<a href="menupelis.html">Menu Peliculas</a>
+			<a href="detallepelis.html">Detalles pelicula</a>
+			<a href="creadores.html">Creadores</a>
+		</nav>
+	</header>
+	<!-- END OF HEADER -->
 	<title>Document</title>
 </head>
+
 <body>
 	<h1>Test</h1>
 </body>
+
 </html>
