--- a/public/creadores.html
+++ b/public/creadores.html
@@ -54,7 +54,10 @@
     
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-
+    
+    <script src="MovieInfo.js"></script>
+    <script src="MovieList.js"></script>
+    <script src="PlusSign.js"></script>
     <script src="CreatorsApp.js"></script>
   </body>
 </html>
