--- a/public/creadores.html
+++ b/public/creadores.html
@@ -55,6 +55,7 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     
+    <script src="ModalAddMovie.js"></script>
     <script src="MovieInfo.js"></script>
     <script src="MovieList.js"></script>
     <script src="PlusSign.js"></script>
