Finishing welcome pages
Finished Signin and Signup pages, landing page can have a chanche to have nicer buttons

--- a/public/signin.html
+++ b/public/signin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Netflix</title>
-  <link rel="stylesheet" href="signin.css">
+  <link rel="stylesheet" href="landing.css">
 </head>
 
 <body>
@@ -19,7 +19,6 @@
       </a>
     </div>
     <div id="container">
-      <form id="log-in-form" action="" method="POST">
         <div class="label-container">
           <h2 id="sign-in-text">Sign in</h1>
         </div>
@@ -32,7 +31,7 @@
         </div>
         <div class="inputError" id="pwd-inputError"></div>
         <div class="box-container" id="login-button-container">
-          <input id="login-button" type="submit" value="Sign In">
+          <input id="login-button" type="button" value="Sign In">
         </div>
         <div class="sign-up">
           <span id="sign-up">New to netflis?</span>
