Implements key and API key validations in frontend.

--- a/public/creadores.html
+++ b/public/creadores.html
@@ -55,6 +55,9 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     
+    <script src="key.js"></script>
+    <script src="checkLogin.js"></script>
+
     <script src="ModalMovie.js"></script>
     <script src="MovieInfo.js"></script>
     <script src="MovieList.js"></script>
