Conection Signin to backend

--- a/public/landing.html
+++ b/public/landing.html
@@ -41,6 +41,10 @@
 					</div>
 				</div>
     </div>
+
+    <script>
+      if(sessionStorage.getItem("token"))window.location.replace("/menupelis");
+    </script>
 </body>
 
 </html>
