--- a/public/creadores.html
+++ b/public/creadores.html
@@ -1,50 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Pantalla de creadores</title>
-  <!-- Required meta tags -->
+  <title>Netflix</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon"
-    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/155/overheated-face_1f975.png">
-  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
-    integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous">
-  </script>
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Netflix_icon.svg/1200px-Netflix_icon.svg.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-      <!-- Barra navegación -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-        <img class="nav-link p-1 mr-3" style="width: 160px;" src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" alt="hotwheels">
-  
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
-          <span class="navbar-toggler-icon"></span>
-        </button>
-  
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="landing.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signup.html" >Sign up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signin.html" >Sign in</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="menupelis.html">Menu peliculas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="detallepelis.html">Detalles pelicula</a>
-            </li>
-              <li class="nav-item">
-                <a class="nav-link" href="creadores.html" >Creadores</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand mb-2" href="/menupelis">
+          <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
+        </a>
+    </nav>
     <div id="creators-container"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
