--- a/public/movie.html
+++ b/public/movie.html
@@ -24,8 +24,8 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     
-    <script src="key.js"></script>
-    <script src="checkLogin.js"></script>
+    <script src="/key.js"></script>
+    <script src="/checkLogin.js"></script>
 </body>
 
 </html>
