--- a/public/signin.html
+++ b/public/signin.html
@@ -41,6 +41,6 @@
     </div>
 
     <script src="./key.js"></script>
-    <script src="./signin.js"></script>
+    <script src="./sign.js"></script>
 </body>
 </html>
