--- a/public/movies.html
+++ b/public/movies.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand mb-2" href="/menupelis">
+        <a class="navbar-brand mb-2" href="/movies">
           <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
         </a>
     </nav>
