--- a/public/creadores.html
+++ b/public/creadores.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand mb-2" href="/menupelis">
-          <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
-        </a>
+      <a class="navbar-brand mb-2" href="/movies">
+        <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
+      </a>
     </nav>
     <div id="creators-container"></div>
 
@@ -21,14 +21,14 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     
-    <script src="key.js"></script>
-    <script src="checkLogin.js"></script>
+    <script src="/key.js"></script>
+    <script src="/checkLogin.js"></script>
 
-    <script src="ModalMovie.js"></script>
-    <script src="MovieInfo.js"></script>
-    <script src="MovieList.js"></script>
-    <script src="PlusSign.js"></script>
-    <script src="CreatorsApp.js"></script>
+    <script src="/react/ModalMovie.js"></script>
+    <script src="/react/MovieInfo.js"></script>
+    <script src="/react/MovieList.js"></script>
+    <script src="/react/PlusSign.js"></script>
+    <script src="/react/CreatorsApp.js"></script>
 </body>
 
 </html>
