--- a/public/movie.html
+++ b/public/movie.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand mb-2" href="/menupelis">
-          <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
-        </a>
+      <a class="navbar-brand mb-2" href="/movies">
+        <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
+      </a>
     </nav>
     <div class="container-fluid bg-dark p-5 text-white">
       <h1>Title</h1>
