--- a/public/movies.html
+++ b/public/movies.html
@@ -14,7 +14,7 @@
         <img src="https://pngimg.com/uploads/netflix/netflix_PNG11.png" class="d-inline-block align-top" height="50" alt="">
       </a>
     </nav>
-    <div id="container-menu"></div>
+    <div id="movies-container" class="container-fluid bg-dark"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -23,6 +23,9 @@
     
     <script src="/key.js"></script>
     <script src="/checkLogin.js"></script>
+
+    <script src="/react/Spinner.js"></script>
+    <script src="/react/MoviesApp.js"></script>
 </body>
 
 </html>
