Implements thumbnails for movies.

--- a/public/movies.html
+++ b/public/movies.html
@@ -24,6 +24,7 @@
     <script src="/key.js"></script>
     <script src="/checkLogin.js"></script>
 
+    <script src="/react/MovieThumbnail.js"></script>
     <script src="/react/Spinner.js"></script>
     <script src="/react/MoviesApp.js"></script>
 </body>
