Implements spinner before loading.

--- a/public/admin.html
+++ b/public/admin.html
@@ -59,6 +59,7 @@
     <script src="/key.js"></script>
     <script src="/checkLogin.js"></script>
 
+    <script src="/react/Spinner.js"></script>
     <script src="/react/ModalMovie.js"></script>
     <script src="/react/MovieInfo.js"></script>
     <script src="/react/MovieList.js"></script>
