--- a/public/signup.html
+++ b/public/signup.html
@@ -53,7 +53,7 @@
             <input type="date" class="form-control" id="birthday-field" placeholder="Password" required>
           </div>
           <br>
-          <button id="signup-button" type="button" class="btn btn-danger btn-block">Sign In</button>
+          <button id="signup-button" type="button" class="btn btn-danger btn-block">Sign Up</button>
           <div class="d-none justify-content-center" id="loading-wheel">
             <div class="spinner-border text-danger" role="status">
               <span class="sr-only">Loading...</span>
