--- a/public/signup.html
+++ b/public/signup.html
@@ -43,17 +43,19 @@
           <div class="form-group">
             <label for="password-field">Password</label>
             <input type="password" class="form-control" id="password-field" placeholder="Password" required pattern="(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{6,16}">
+            <small id="password-legend" class="form-text text-danger d-none">Invalid password</small>
           </div>
           <div class="form-group">
             <label for="re-password-field">Confirm password</label>
             <input type="password" class="form-control" id="re-password-field" placeholder="Password" required pattern="(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{6,16}">
+            <small id="re-password-legend" class="form-text text-danger d-none">Passwords dont match.</small>
           </div>
           <div class="form-group">
             <label for="birthday-field">Enter your birthday</label>
             <input type="date" class="form-control" id="birthday-field" placeholder="Password" required>
           </div>
           <br>
-          <button id="signup-button" type="button" class="btn btn-danger btn-block">Sign In</button>
+          <button id="signup-button" type="button" class="btn btn-danger btn-block" disabled>Sign In</button>
           <div class="d-none justify-content-center" id="loading-wheel">
             <div class="spinner-border text-danger" role="status">
               <span class="sr-only">Loading...</span>
